# validiz-python

./: .coverage  .gitignore  API_DOCUMENTATION.md  Makefile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_tests.sh  setup.py
examples/: README.md  async_example.py  sync_example.py
tests/: config.py  utils.py
tests/integration/: test_async_integration.py  test_sync_integration.py
tests/unit/: test_async_client.py  test_exceptions.py  test_sync_client.py
validiz/: __init__.py  _base_client.py  _exceptions.py  _response_handling.py  _schema.py  async_client.py  base_client.py  client.py  response_handling.py
