[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "validiz"
version = "1.1.0"
description = "A Python client library for the Validiz Email Validation API"
readme = "README.md"
authors = [
    {name = "Shehryar Sohail", email = "shehryardev@paklogics.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["email", "validation", "api", "client", "async"]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.25.0",
    "aiohttp>=3.10.0",
    "pandas>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/shehryardev/validiz-python"
Issues = "https://github.com/shehryardev/validiz-python/issues"

[tool.setuptools]
packages = ["validiz"] 